[tool.poetry]
name = "recsys-course"
version = "0.1.0"
description = ""
authors = ["kettarian <nikita.protsanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
tqdm = "^4.67.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
